debugged css: input form and spinner modal styled correctly on small screens

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,8 +7,8 @@
 }
 
 *,
-::before,
-::after {
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -188,6 +188,7 @@ body {
 }
 
 .signed-in-user {
+  font-size: 0.9rem;
   display: grid;
   grid-template-columns: 4rem 1fr auto;
   align-items: center;
@@ -197,7 +198,7 @@ body {
   border: solid var(--line-thickness);
   padding: 0.5rem;
   margin: 0.5rem auto;
-  min-width: 24rem;
+  width: min(100%, 24rem);
 
   .door {
     width: 2rem;
@@ -245,7 +246,6 @@ body {
     background-color: var(--bg-alpha-1);
     max-width: 600px;
     margin: auto;
-    // margin-top: 0;
     margin-bottom: 1rem;
     padding: 1rem;
 
@@ -295,6 +295,12 @@ body {
   width: 100%;
   height: 100%;
   display: grid;
+  opacity: 0.95;
+  background-image: linear-gradient(
+    to right,
+    rgb(137, 84, 168),
+    rgb(47, 130, 151)
+  );
 
   img {
     animation: spin 2.5s infinite linear;
@@ -333,7 +339,7 @@ body {
 
   .up {
     transform: translateY(-65px) translateX(200%);
-    width: 3.5rem;
+    width: 3rem;
   }
 
   .left {
@@ -353,9 +359,13 @@ body {
 
   .signature {
     @extend .timestamp;
-    font-size: large;
+    // font-size: large;
     display: block;
     margin: 0.5rem 0;
     color: #fff;
+
+    @media (min-width: 600px) {
+      font-size: large;
+    }
   }
 }
